# rays

./: CMakeLists.txt  Camera.h  FrameBuffer.h  Light.h  Material.h  Objects.h  Randomizer.h  Shader.h  background.h  io.h  main.cpp  ray_path.cpp  ray_path.h  rays.h  stb_image_write.h  texture.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw-3.3.2/: CMakeCache.txt
shaders/: vertexsh
